force-app/main/default/objects/Factors__c/Factors__c.object-meta.xml
<CustomObject>
    <label>Country Factors</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>