force-app/main/default/objects/Factors__c/fields/Allocated_Risk_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Risk_Percent__c</fullName>
    <label>Allocated Risk Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>