force-app/main/default/objects/Factors__c/fields/GDP__c.field-meta.xml
<CustomField>
    <fullName>GDP__c</fullName>
    <label>GDP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>