force-app/main/default/objects/Factors__c/fields/GWP__c.field-meta.xml
<CustomField>
    <fullName>GWP__c</fullName>
    <label>GWP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>