force-app/main/default/objects/Factors__c/fields/index__c.field-meta.xml
<CustomField>
    <fullName>index__c</fullName>
    <label>index</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>