force-app/main/default/objects/Factors__c/fields/ratio__c.field-meta.xml
<CustomField>
    <fullName>ratio__c</fullName>
    <label>ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>