force-app/main/default/objects/Factors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>index__c</columns>
    <columns>Allocated_Risk_Percent__c</columns>
    <columns>Local_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>